--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
             font-weight: bold;
         }
         .banner {
-            background: url('community-field.jpg') no-repeat center center/cover;
+            background: url('pic 
+                1.jpg') no-repeat center center/cover;
             height: 60vh;
             display: flex;
             flex-direction: column;
