--- a/index.html
+++ b/index.html
@@ -38,8 +38,7 @@
             font-weight: bold;
         }
         .banner {
-            background: url('pic 
-                1.jpg') no-repeat center center/cover;
+            background: url('pic 1.jpg') no-repeat center center/cover;
             height: 60vh;
             display: flex;
             flex-direction: column;
