--- a/index.html
+++ b/index.html
@@ -214,8 +214,11 @@
             <p><strong>From Educator and Engineer to Advocate for Progress</strong></p>
             <p><strong>Educational Background:</strong></p>
             <ul>
-                <li>PhD in Agriculture and Soil Engineering.</li>
-                <li>Master’s in Mechanical Engineering.</li>
+               <li>PhD in Agriculture and Soil Engineering – <em>Okayama University, Japan</em>.</li>
+                <li>Master’s in Mechanical Engineering – <em>Jomo Kenyatta University of Agriculture and Technology (JKUAT), Kenya</em>.</li>
+                <li>Bachelor’s in Soil, Water, and Environmental Engineering – <em>JKUAT, Kenya</em>.</li>
+                <li>KCSE – <em>Nduundune Secondary School</em>.</li>
+                <li>KCPE – <em>Mwanyani Primary School</em>.</li>
             </ul>
             <p><strong>Professional Achievements:</strong></p>
             <ul>
